--- a/app/src/main/res/layout/fragment_shuffle.xml
+++ b/app/src/main/res/layout/fragment_shuffle.xml
@@ -14,6 +14,7 @@
         android:layout_height="68dp"
         android:fontFamily="sans-serif-smallcaps"
         android:text="Shuffle"
+        android:layout_marginTop="10dp"
         android:textColor="#000000"
         android:textSize="50sp"
         android:textStyle="bold"
