--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -15,6 +15,7 @@
         android:text="Browse"
         android:textColor="#000000"
         android:textSize="50sp"
+        android:layout_marginTop="29dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
