updated navigation bar

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:icon="@drawable/test"
+        tools:ignore="MenuTitle" />
 
     <item
         android:id="@+id/navigation_browse"
         android:icon="@drawable/ic_reel"
-        android:title="@string/title_browse" />
+        tools:ignore="MenuTitle"/>
 
     <item
         android:id="@+id/navigation_shuffle"
         android:icon="@drawable/baseline_shuffle_24"
-        android:title="Shuffle" />
+        tools:ignore="MenuTitle" />
 
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/baseline_person_24"
-        android:title="@string/title_profile" />
+        tools:ignore="MenuTitle" />
 
 </menu>
