updated design on all the quiz fragments

--- a/app/src/main/res/layout/fragment_q2.xml
+++ b/app/src/main/res/layout/fragment_q2.xml
@@ -44,10 +44,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
-        android:text="Romance"
         android:textSize="15dp"
+        android:text="Romance"
         app:layout_constraintEnd_toStartOf="@+id/btn_action"
         app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="Drama"
         android:textSize="15dp"
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="History"
         android:textSize="15dp"
@@ -89,7 +89,7 @@
 
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="Mystery"
         android:textSize="15dp"
@@ -105,7 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="Next"
         android:textSize="15dp"
@@ -120,7 +120,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="Fantasy"
         android:textSize="15dp"
@@ -136,7 +136,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="Horror"
         android:textSize="15dp"
@@ -151,7 +151,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="Sci-Fi"
         android:textSize="15dp"
@@ -167,7 +167,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="Faith"
         android:textSize="15dp"
@@ -182,7 +182,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="Comedy"
         android:textSize="15dp"
@@ -198,7 +198,7 @@
         android:layout_height="51dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="4dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="Rom-Com"
         android:textSize="15dp"
@@ -211,7 +211,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="Adventure"
         android:textSize="15dp"
@@ -227,7 +227,7 @@
         android:layout_width="152dp"
         android:layout_height="46dp"
         android:layout_marginTop="12dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="Documentary"
         android:textSize="15dp"
@@ -242,7 +242,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="164dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="Action"
         android:textSize="15dp"
@@ -257,7 +257,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="Thriller"
         android:textSize="15dp"
