--- a/app/src/main/res/layout/fragment_q1.xml
+++ b/app/src/main/res/layout/fragment_q1.xml
@@ -61,10 +61,9 @@
         android:layout_width="295dp"
         android:layout_height="117dp"
         android:layout_marginTop="4dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="Movie"
-
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="@+id/text_Home"
         app:layout_constraintStart_toStartOf="@+id/text_Home"
@@ -76,7 +75,7 @@
         android:layout_width="295dp"
         android:layout_height="117dp"
         android:layout_marginTop="64dp"
-        android:backgroundTint="#8F79BF"
+        android:backgroundTint="#7973F7"
         android:fontFamily="@font/alata"
         android:text="Show"
         android:textSize="20dp"
@@ -90,8 +89,8 @@
         android:layout_width="295dp"
         android:layout_height="117dp"
         android:layout_marginTop="4dp"
-        android:backgroundTint="#8F79BF"
         android:fontFamily="@font/alata"
+        android:backgroundTint="#7973F7"
         android:text="Both"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="@+id/text_Home"
