--- a/app/src/main/res/layout/fragment_q4.xml
+++ b/app/src/main/res/layout/fragment_q4.xml
@@ -6,60 +6,74 @@
     android:layout_height="match_parent"
     tools:context=".ui.q4rating.q4Fragment">
 
-
     <TextView
         android:id="@+id/text_Home"
-        android:layout_width="260dp"
-        android:layout_height="62dp"
-        android:fontFamily="@font/alata"
+        android:layout_width="311dp"
+        android:layout_height="69dp"
+        android:fontFamily="sans-serif-smallcaps"
         android:text=" What2Watch"
         android:textColor="#000000"
-        android:textSize="40sp"
+        android:textSize="50sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.237" />
+        app:layout_constraintVertical_bias="0.092" />
 
-    <Button
-        android:id="@+id/btnNext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Next"
-        app:layout_constraintEnd_toEndOf="@+id/slider"
-        app:layout_constraintStart_toStartOf="@+id/slider"
-        app:layout_constraintTop_toBottomOf="@+id/slider"
-        tools:ignore="MissingConstraints" />
 
     <com.google.android.material.slider.Slider
         android:id="@+id/slider"
         android:layout_width="350dp"
         android:layout_height="43dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="28dp"
         android:stepSize="1"
         android:valueFrom="0.0"
         android:valueTo="10.0"
+app:tickColorInactive="@color/white"
+        app:tickColorActive="@color/black"
+app:thumbColor="#7973F7"
+app:trackColorActive="#7973F7"
         app:layout_constraintEnd_toEndOf="@+id/text_rating"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="@+id/text_rating"
-        app:layout_constraintTop_toBottomOf="@+id/text_rating" />
+        app:layout_constraintTop_toBottomOf="@+id/text_rating"
+        app:tickColor="#7973F7" />
 
+    <Button
+        android:id="@+id/btnNext"
+        style="@style/Widget.Material3.Button"
+        android:layout_width="151dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="36dp"
+        android:backgroundTint="#7973F7"
+        android:fontFamily="@font/alata"
 
-<TextView
-     android:id="@+id/text_rating"
-     android:layout_width="270dp"
-     android:layout_height="60dp"
-     android:layout_marginTop="48dp"
-     android:fontFamily="@font/alata"
-     android:text=" IMBD Rating Slider"
-     android:textColor="#000000"
-     android:textSize="30sp"
-     app:layout_constraintLeft_toLeftOf="@id/text_Home"
-     app:layout_constraintRight_toRightOf="@id/text_Home"
-     app:layout_constraintTop_toBottomOf="@id/text_Home" />
+        android:text="Next"
+        android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@+id/text_results" />
 
- <TextView
+    <TextView
+        android:id="@+id/text_rating"
+        android:layout_width="216dp"
+        android:layout_height="84dp"
+        android:layout_marginTop="48dp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:text="Care about IMDB Rating?"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@id/text_Home"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <TextView
      android:id="@+id/text_Q4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
@@ -75,5 +89,20 @@
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.977" />
 
+    <TextView
+        android:id="@+id/text_results"
+        android:layout_width="242dp"
+        android:layout_height="72dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:text="Let's check out your results...."
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@+id/slider" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
