--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -6,43 +6,46 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView10"
-        android:layout_width="215dp"
-        android:layout_height="111dp"
-        android:fontFamily="cursive"
-        android:text="What2Watch"
-        android:textColor="#770D0D"
-        android:textSize="40sp"
+        android:id="@+id/text_Home"
+        android:layout_width="311dp"
+        android:layout_height="69dp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:text=" What2Watch"
+        android:textColor="#000000"
+        android:textSize="50sp"
         android:textStyle="bold"
-        android:typeface="serif"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.449" />
+        app:layout_constraintVertical_bias="0.092" />
+
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="262dp"
         android:layout_height="200dp"
+        android:layout_marginTop="76dp"
         android:src="@drawable/tv"
-        app:layout_constraintEnd_toEndOf="@+id/textView10"
-        app:layout_constraintHorizontal_bias="0.51"
-        app:layout_constraintStart_toStartOf="@+id/textView10"
-        tools:layout_editor_absoluteY="241dp" />
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@+id/text_Home" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/Widget.Material3.Button"
+        android:backgroundTint="#7973F7"
+        android:fontFamily="@font/alata"
+        android:textSize="15dp"
         android:text="@string/get_started"
-        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.685" />
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.212" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
